<resources>
    <string name="app_name">Pedity Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="enterkeytext">Enter your Secret Key</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="enter_secret_key">Enter your secret Key</string>
    <string name="secret_hint">Secret Key</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="send_success">Payment Successful</string>
    <string name="send_failed">Payment failed.</string>

    <!-- Strings related to Balance -->
    <string name="balance_amount">0 PEDI</string>
    <string name="balance_native">0 XLM</string>
    <string name="balance">Balance</string>
    <string name="account_id">AccountId</string>
    <string name="balance_table">AccountId</string>

    <!-- Strings related to Send -->
    <string name="title_activity_send">Send</string>
    <string name="scan_btn">SCAN Address</string>
    <string name="scan_txt">Scan QR code to send or enter the account number</string>
    <string name="action_send_address">Login</string>
    <string name="action_send_description">Login</string>
    <string name="action_memo_cbox">Select if you need memo text</string>
    <string name="action_memo_txt">Memo Text</string>
    <string name="hint_destination">Destination Account Id</string>
    <string name="hint_amt">Amount to be sent</string>


    <!-- Strings related to Receive -->
    <string name="pedi_address">PEDI Address</string>
    <string name="pedi_address_value">Address</string>
    <string name="qrcode">QR Code</string>
    <string name="copy">Copy</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="asset_array">
        <item>PEDI</item>
        <item>XLM</item>
        <item>SLT</item>
        <item>MOBI</item>
        <item>RMT</item>
        <item>FRAS</item>
        <item>TERN</item>
    </string-array>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
