<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPedity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <!--ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"-->

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/enter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_pedi_address"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="100dp"
            android:singleLine="true"
            android:text="@string/enter_secret_key"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secret_hint"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/secret_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/editext_normal"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/editext_normal"
                android:textColorLink="@color/editext_normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="2dp"
            android:drawableStart="@mipmap/ic_exittoapp"
            android:gravity="center_vertical"
            android:text="@string/title_activity_login"
            android:textStyle="bold" />


    </LinearLayout>
    <!--/ScrollView-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:paddingLeft="150dp"
            android:paddingRight="150dp"
            android:src="@drawable/logo" />
    </LinearLayout>


</LinearLayout>