<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPedity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pwallet.peditywallet.MainActivity"
    >

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:indeterminate="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/balance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/editext_normal"
        android:textSize="24sp"
        android:text="@string/balance_amount"
        android:drawableStart="@drawable/ic_check_circle_black_20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <TextView
        android:id="@+id/balance_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/editext_normal"
        android:textSize="24sp"
        android:layout_marginTop="150dp"
        android:text="@string/balance_native"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/app_name"
        android:paddingBottom="20dp"
        android:paddingLeft="150dp"
        android:paddingRight="150dp"
        android:src="@drawable/logo" />

</FrameLayout>
